# cpp-clang-plugin-reflection-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix
lobster/: CMakeLists.txt  lobster.cpp  lobster.hpp
plugin/: CMakeLists.txt  Lobster.cpp  ReflectedClass.cpp  ReflectedClass.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  TestClass.hpp  main.cpp
